--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "@trpc/next": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "bcryptjs": "^3.0.2",
     "geist": "^1.3.0",
     "next": "^15.0.1",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
