--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "bcryptjs": "^3.0.2",
     "geist": "^1.3.0",
+    "lucide-react": "^0.483.0",
     "next": "^15.0.1",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
